--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^7.1.0"
   },
   "dependencies": {
-    "pixi.js": "^8.12.0"
+    "@pixi/sound": "^5.2.3",
+    "pixi.js": "^7.4.3"
   }
 }
